Bug 510312 - Replace usage of new Integer(int) with Integer.valueOf() in eclipse.platform.text plug-ins - Part 2
Change-Id: I3d76285a2e3333114ba56b7cd0745d13440d5a44
Signed-off-by: Lars Vogel <Lars.Vogel@vogella.com>